<resources>
    <string name="app_name">Mi Mente</string>
    <string name="title_activity_thankful_diary_help">ThankfulDiaryHelpActivity</string>
    <string name="title_activity_progress_help">ProgressHelpActivity</string>
    <string name="back">Atrás</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="zero">Introduccion</string>
    <string name="one">Mis sentidos son mas sabios que mi mente</string>
    <string name="two">Escaneo Corporal</string>
    <string name="three">Flotando en una burbuja</string>
    <string name="four">Enfocandome en un objeto</string>
    <string name="five">El valor del silencio</string>
    <string name="six">Energizandome</string>
    <string name="seven">Aceptando mis emociones</string>
    <string name="eight">Estoy agradecido</string>
    <string name="nine">Abro mi mente</string>
    <string name="ten">Meditacion bajo la ducha</string>

    <string name="journalofthoughts">Diario de Agradecimientos</string>

    <string name="health">Salud</string>
    <string name="meditaion">Meditación</string>
    <string name="thankfuldiary">Diario agradecido</string>
    <string name="myprogress">Mi progreso</string>
    <string name="myprofile">Mi perfil</string>
    <string name="contactus">Contáctenos</string>


    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>





    <string name="title_activity_chart_adaptor">ChartAdaptor</string>

</resources>
